--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.15.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
