--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_SERVER_BASE_URL = https://lesj82.softvencefsd.xyz/api
-VITE_SERVER_URL = http://lesj82.softvencefsd.xyz/
+VITE_SERVER_URL = https://lesj82.softvencefsd.xyz/
