--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.15.0",
