--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SERVER_BASE_URL = http://dashboard.giftacoffee.com/api
-VITE_SERVER_URL = http://dashboard.giftacoffee.com/
+VITE_SERVER_BASE_URL = https://dashboard.giftacoffee.com/api
+VITE_SERVER_URL = https://dashboard.giftacoffee.com/
